--- a/src/index.scss
+++ b/src/index.scss
@@ -290,7 +290,7 @@ html:not(:has(#main)) header + div {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: auto;
   height: 100%;
   margin: auto;
   position: relative;
