--- a/src/index.scss
+++ b/src/index.scss
@@ -400,6 +400,12 @@ html:not(:has(#main)) header + div {
 
 .about {
   max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
   margin: 0 auto 150px;
   .text_full {
     font-size: 18px;
@@ -544,6 +550,12 @@ html:not(:has(#main)) header + div {
 
 .gallery {
   max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
   margin: 130px auto;
   width: 100vw;
 }
@@ -559,6 +571,12 @@ html:not(:has(#main)) header + div {
 .dogs_page {
   width: 100vw;
   max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
   margin: 0 auto;
   margin-bottom: 140px;
   .headline {
@@ -684,6 +702,12 @@ html:not(:has(#main)) header + div {
 .puppies_page {
   width: 100vw;
   max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
   margin: 0 auto;
   margin-bottom: 140px;
   .headline {
