--- a/src/index.scss
+++ b/src/index.scss
@@ -312,6 +312,9 @@ html:not(:has(#main)) header + div {
 
 .hero .hero_text h4 {
   font-size: 50px;
+  @media(max-width: 756px) {
+    font-size: 45px;
+  }
   font-family: "Lora", serif;
   line-height: 60px;
   max-width: 600px;
@@ -540,6 +543,155 @@ html:not(:has(#main)) header + div {
           aspect-ratio: unset;
           max-height: 500px;
           width: 100vw;
+        }
+      }
+    }
+  }
+}
+
+// news on homepage
+
+.homepage_news {
+  max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
+  margin: 100px auto;
+  width: 100vw;
+  .homepage_news__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 40px;
+  }
+  .posts {
+    max-height: 400px;
+    overflow: auto;
+    padding-right: 30px;
+    margin-top: 10px;
+    .summary {
+      cursor: pointer;
+      h4 {
+        font-family: 'Lora', serif;
+        color: #000;
+        font-size: 18px;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        small {
+          display: block;
+          margin-left: 0px;
+          font-size: 12px;
+          color: #bababa;
+          font-family: 'Istok Web', sans-serif;
+          line-height: 16px;
+          padding-bottom: 2px;
+        }
+      }
+      @media(min-width: 979px) {
+        h4:hover {
+          color: var(--primary-text);
+        }
+      }
+    } 
+  }
+  /* width */
+  .posts::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  /* Track */
+  .posts::-webkit-scrollbar-track {
+    border-radius: 3px;
+  }
+  
+  /* Handle */
+  .posts::-webkit-scrollbar-thumb {
+    background: var(--primary-text);  
+    border-radius: 3px;
+  }
+
+  /* Handle on hover */
+  .posts::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-text); 
+  }
+
+  .post {
+    padding: 25px 35px;
+    border-radius: 10px;
+    background: #f5f5f5;
+    h4 {
+      margin-top: 0;
+      font-family: 'Lora', serif;
+      color: #000;
+      font-size: 24px;
+      margin-top: 0;
+      margin-bottom: 0px;
+    }
+    small {
+      display: block;
+      margin-left: 0px;
+      font-size: 12px;
+      color: #bababa;
+      font-family: 'Istok Web', sans-serif;
+      line-height: 16px;
+      padding-bottom: 10px;
+      font-weight: 700;
+    }
+    .post_content {
+      display: flex;
+      align-items: start;
+      .post_gfx {
+        max-width: 400px;
+        max-height: 400px;
+        border-radius: 5px;
+        object-fit: contain;
+        margin-right: 20px;
+        margin-top: 5px;
+      }
+      .post_content__text {
+        margin-top: 0;
+      }
+    }
+  }
+}
+
+@media(max-width: 756px) {
+  .homepage_news {
+    margin-top: 40px;
+    margin-bottom: 0;
+    .headline {
+      margin-top: 0;
+      margin-bottom: 0px;
+    }
+    .homepage_news__wrapper {
+      grid-template-columns: 1fr;
+      grid-gap: 20px;
+      .posts {
+        max-height: 200px;
+        overflow: auto;
+        padding-right: 30px;
+        margin-top: 10px;
+        margin-right: 15px;
+        margin-left: 15px;
+      }
+      .post {
+        padding: 30px 15px;
+        border-radius: 0;
+        background: #f5f5f5;
+        h4 {
+          font-size: 30px;
+        }
+        small {
+          margin-bottom: 10px;
+        }
+        .post_content {
+          flex-direction: column;
+          .post_gfx {
+            max-width: 100%;
+            margin-bottom: 20px;
+          }
         }
       }
     }
@@ -780,6 +932,27 @@ html:not(:has(#main)) header + div {
           margin-right: 15px;
         }
       }
+    }
+  }
+}
+
+// gallery page
+
+#gallery {
+  .gallery {
+    margin-top: 40px;
+  }
+  
+  .headline {
+    margin-bottom: 60px;
+  }
+  @media(max-width: 756px) {
+    .headline {
+      margin-bottom: 40px;
+      margin-top: 40px;
+      font-size: 40px;
+      line-height: 40px;
+      padding: 0 15px;
     }
   }
 }
