--- a/src/index.scss
+++ b/src/index.scss
@@ -559,7 +559,7 @@ html:not(:has(#main)) header + div {
   @media(max-width: 1000px) {
     max-width: 736px;
   }
-  margin: 100px auto;
+  margin: 100px auto 20px;
   width: 100vw;
   .homepage_news__wrapper {
     display: grid;
@@ -695,6 +695,55 @@ html:not(:has(#main)) header + div {
         }
       }
     }
+  }
+}
+
+// instagram
+
+.instagram {
+  max-width: 1200px;
+  @media(max-width: 1230px) {
+    max-width: 970px;
+  }
+  @media(max-width: 1000px) {
+    max-width: 736px;
+  }
+  margin: 0px auto 100px;
+  width: 100vw;
+  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 30px;
+  a {
+    text-align: right;
+    font-family: "Lora", serif;
+    font-style: italic;
+    font-size: 14px;
+    margin: 0;
+    color: #000;
+    text-decoration: none;
+    line-height: 16px;
+    span {
+      display: inline-block;
+      padding-left: 10px;
+      transform: translateX(0) translateY(2px);
+      transition: transform 0.3s;
+      font-size: 16px;
+    }
+  }
+  @media(min-width: 979px) {
+    a:hover {
+      span {
+        transform: translateX(5px) translateY(2px);
+      }
+    }
+  }
+}
+
+@media(max-width: 756px) {
+  .instagram {
+    margin: 0 auto;
   }
 }
 
@@ -1013,7 +1062,7 @@ html:not(:has(#main)) header + div {
 
 #footer {
   position: relative;
-  padding: 30px;
+  padding: 20px 30px 0;
   color: #fff;
   &:before {
     content: '';
@@ -1041,6 +1090,7 @@ html:not(:has(#main)) header + div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 20px;
     .footer_links {
       a {
         padding: 5px;
@@ -1052,6 +1102,30 @@ html:not(:has(#main)) header + div {
           }
         }
       }
+    }
+  }
+  .footer_copy {
+    position: relative;
+    padding-bottom: 7px;
+    padding-top: 7px;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 100vw;
+      height: 100%;
+      left: 50%;
+      margin-left: -50vw;
+      top: 0;
+      z-index: -1;
+      background: var(--primary-text);
+    }
+    p {
+      margin: 0;
+      text-align: center;
+      color: var(--primary-color);
+      font-family: 'Lora', serif;
+      text-transform: uppercase;
+      font-size: 14px;
     }
   }
 }
