--- a/src/index.scss
+++ b/src/index.scss
@@ -744,6 +744,9 @@ html:not(:has(#main)) header + div {
 @media(max-width: 756px) {
   .instagram {
     margin: 0 auto;
+    justify-content: center;
+    padding-right: 30px;
+    padding: 20px 5px 25px;
   }
 }
 
