--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,12 @@ code {
   }
 }
 
+#root {
+  @media(max-width: 756px) {
+    max-width: 100vw;
+  }
+}
+
 /* HEADER */
 
 header.header__wrapper {
@@ -1029,6 +1035,12 @@ html:not(:has(#main)) header + div {
   .contact_wrapper {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-gap: 20px;
+  }
+  .maps {
+    iframe {
+      border: none;
+    }
   }
   .contact_links {
     .contact_information {
@@ -1064,7 +1076,7 @@ html:not(:has(#main)) header + div {
   }
   @media(max-width: 756px) {
     .headline {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       margin-top: 40px;
       font-size: 40px;
       line-height: 40px;
@@ -1075,7 +1087,18 @@ html:not(:has(#main)) header + div {
       justify-content: center;
     }
     .maps {
-      margin-bottom: 80px;
+      margin-bottom: -7px;
+      width: 100vw;
+      margin-left: -15px;
+      margin-right: -15px;
+      border: none;
+      iframe {
+        border: none;
+      }
+    }
+    .contact_wrapper {
+      grid-template-columns: 1fr;
+      grid-gap: 10px;
     }
   }
   @media(max-width: 756px) {
@@ -1083,6 +1106,7 @@ html:not(:has(#main)) header + div {
     padding-right: 15px;
     padding-left: 15px;
     width: calc(100vw - 30px);
+    margin-bottom: 0;
   }
 }
 
