--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,7 @@ code {
       font-size: 14px !important;
     }
   }
-  @media(min-width: 757px) {
+  @media(min-width: 979px) {
     flex-wrap: nowrap !important;
     div {
       margin-top: 0px !important;
@@ -89,7 +89,7 @@ code {
 }
 
 #root {
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     max-width: 100vw;
   }
 }
@@ -142,7 +142,7 @@ header .logo, header .menu {
 
 header .logo {
   margin-left: 30px;
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     margin-left: 0px;
   }
 }
@@ -155,7 +155,7 @@ header .menu {
   margin-right: 60px;
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   header#header {
     padding-top: 0;
     padding-bottom: 0;
@@ -242,7 +242,7 @@ html.--scroll-down header.header__wrapper ul > li > a {
 
 html:not(:has(#main)) header + div {
   padding-top: 140px;
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     padding-top: 60px;
   }
 }
@@ -254,7 +254,7 @@ html:not(:has(#main)) header + div {
   color: var(--primary-text);
   text-align: center;
   margin-bottom: 35px;
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     font-size: 42px;
   }
 }
@@ -318,7 +318,7 @@ html:not(:has(#main)) header + div {
 
 .hero .hero_text h4 {
   font-size: 50px;
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     font-size: 45px;
   }
   font-family: "Lora", serif;
@@ -372,7 +372,7 @@ html:not(:has(#main)) header + div {
   height: 100%;
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .hero {
     display: flex;
     flex-direction: column;
@@ -435,7 +435,7 @@ html:not(:has(#main)) header + div {
   }
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .about {
     padding-left: 15px;
     padding-right: 15px;
@@ -515,7 +515,7 @@ html:not(:has(#main)) header + div {
   margin-bottom: 50px;
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .dogs {
     padding: 40px 0 80px;
     .headline {
@@ -663,7 +663,7 @@ html:not(:has(#main)) header + div {
   }
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .homepage_news {
     margin-top: 40px;
     margin-bottom: 0;
@@ -712,7 +712,7 @@ html:not(:has(#main)) header + div {
     max-width: 970px;
   }
   @media(max-width: 1000px) {
-    max-width: 736px;
+    max-width: calc(100% - 30px);
   }
   margin: 0px auto 100px;
   width: 100vw;
@@ -747,7 +747,7 @@ html:not(:has(#main)) header + div {
   }
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .instagram {
     margin: 0 auto;
     justify-content: center;
@@ -770,7 +770,7 @@ html:not(:has(#main)) header + div {
   width: 100vw;
 }
 
-@media(max-width: 756px) {
+@media(max-width: 978px) {
   .gallery {
     margin: 0 auto;
   }
@@ -818,7 +818,7 @@ html:not(:has(#main)) header + div {
         }
         img {
           max-width: 100%;
-          @media(max-width: 756px) {
+          @media(max-width: 978px) {
             max-width: 86%;
           }
         }
@@ -850,7 +850,7 @@ html:not(:has(#main)) header + div {
       }
     }
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     margin-bottom: 80px;
     .headline {
       margin-bottom: 40px;
@@ -963,7 +963,7 @@ html:not(:has(#main)) header + div {
       }
     }
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     margin-bottom: 80px;
     padding-right: 15px;
     padding-left: 15px;
@@ -1005,7 +1005,7 @@ html:not(:has(#main)) header + div {
   .headline {
     margin-bottom: 60px;
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     .headline {
       margin-bottom: 40px;
       margin-top: 40px;
@@ -1074,7 +1074,7 @@ html:not(:has(#main)) header + div {
       }
     }
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     .headline {
       margin-bottom: 20px;
       margin-top: 40px;
@@ -1101,7 +1101,7 @@ html:not(:has(#main)) header + div {
       grid-gap: 10px;
     }
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     margin-bottom: 80px;
     padding-right: 15px;
     padding-left: 15px;
@@ -1158,7 +1158,7 @@ html:not(:has(#main)) header + div {
       }
     }
   }
-  @media(max-width: 756px) {
+  @media(max-width: 978px) {
     padding-right: 15px;
     padding-left: 15px;
     width: calc(100vw - 30px);
