--- a/src/index.scss
+++ b/src/index.scss
@@ -1230,7 +1230,7 @@ html:not(:has(#main)) header + div {
   }
   .about_stories {
     .about_story {
-      padding: 30px 30px 20px;
+      // padding: 30px 30px 20px;
       background: #f7f7f7;
       margin-bottom: 30px;
       border-radius: 20px;
@@ -1242,6 +1242,83 @@ html:not(:has(#main)) header + div {
       }
       p {
         font-style: italic;
+      }
+      display: grid;
+      grid-template-columns: 2fr 1.3fr;
+      grid-gap: 40px;
+      .story_text {
+        padding: 30px 0 20px 30px;
+      }
+      .story_img {
+        img {
+          max-width: 100%;
+          min-height: 100%;
+          object-fit: cover;
+          border-radius: 0 20px 20px 0;
+          -webkit-filter: sepia(1);
+          filter: sepia(1);
+        }
+      }
+    }
+    .about_story:nth-of-type(even) {
+      grid-template-columns: 1.3fr 2fr;
+      .story_text {
+        padding: 30px 30px 20px 0;
+      }
+      .story_img {
+        img {
+          max-width: 100%;
+          min-height: 100%;
+          object-fit: cover;
+          border-radius: 20px 0 0 20px;
+        }
+      }
+    }
+    @media(max-width: 1000px) {
+      .about_story {
+        grid-template-columns: 1fr;
+        grid-gap: 0;
+        padding: 0 !important;
+        .story_img {
+          max-height: 400px;
+          img {
+            min-width: 100%;
+            height: 100%;
+            max-height: 400px;
+            object-fit: cover;
+            border-radius: 0 0 20px 20px;
+          }
+        }
+        .story_img.--vertical {
+          img {
+            object-position: 50% 20%;
+          }
+        }
+        .story_text {
+          padding: 30px 15px 20px 15px;
+          p {
+            font-size: 14px;
+          }
+        }
+      }
+      .about_story:nth-of-type(even) {
+        grid-template-columns: 1fr;
+        grid-gap: 0;
+        padding: 0 !important;
+        .story_img {
+          max-height: 400px;
+          img {
+            min-width: 100%;
+            height: 100%;
+            max-height: 400px;
+            object-fit: cover;
+            border-radius: 0 0 20px 20px;
+          }
+        }
+        .story_text {
+          order: -1;
+          padding: 30px 15px 20px 15px;
+        }
       }
     }
   }
@@ -1262,6 +1339,38 @@ html:not(:has(#main)) header + div {
       .about_story {
         padding: 30px 20px 20px;
       }
+    }
+  }
+  .about_contact:has(#read_toggler) + .about_stories {
+    display: none;
+  }
+  .about_contact:has(#read_toggler.open) + .about_stories {
+    display: block;
+  }
+  #read_toggler {
+    color: #000;
+    text-decoration: underline;
+    cursor: pointer;
+    svg {
+      padding-top: 4px;
+      padding-left: 10px;
+      width: 13px;
+      height: 13px;
+    }
+  }
+  @media(min-width: 979px) {
+    #read_toggler:hover {
+      text-decoration: none;
+    }
+  }
+  #read_toggler:not(.open) {
+    .--hide {
+      display: none;
+    }
+  }
+  #read_toggler.open {
+    .--show {
+      display: none;
     }
   }
 }
