--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,9 @@ body {
   background: #fff;
   font-family: 'Istok Web', sans-serif;
   overflow-x: hidden;
+  img {
+    max-width: 100%;
+  }
 }
 
 code {
@@ -415,6 +418,15 @@ html:not(:has(#main)) header + div {
   @media(max-width: 1000px) {
     max-width: 736px;
   }
+  img.--mobile {
+    max-width: 100%;
+    margin: 0;
+  }
+  @media(min-width: 757px) {
+    img.--mobile {
+      display: none;
+    }
+  }
   margin: 0 auto 150px;
   .text_full {
     font-size: 18px;
@@ -445,9 +457,10 @@ html:not(:has(#main)) header + div {
       flex-direction: column;
       gap: 0;
       img {
-        margin-left: -15px;
-        margin-right: -15px;
-        width: calc(100% + 30px);
+        // margin-left: -15px;
+        // margin-right: -15px;
+        // width: calc(100% + 30px);
+        max-width: 100%;
         margin-bottom: 10px;
       }
     }
@@ -1223,6 +1236,34 @@ html:not(:has(#main)) header + div {
     .about_name {
       font-style: italic;
     }
+    .wrapper {
+      display: grid;
+      grid-template-columns: 2fr 1.2fr;
+      div:has(img) {
+        padding: 20px;
+        padding-right: 0;
+        img {
+          object-fit: cover;
+          min-width: 100%;
+          max-height: 100%;
+          border-radius: 10px;
+        }
+      }
+      @media(max-width: 756px) {
+        display: flex;
+        flex-direction: column-reverse;
+        div:has(img) {
+          padding: 0px;
+        }
+      }
+    }
+    .wrapper.--reverse {
+      grid-template-columns: 1.2fr 2fr;
+      div:has(img) {
+        padding-left: 0;
+        padding-right: 20px;
+      }
+    }
   }
   .about_contact {
     margin-top: 60px;
@@ -1246,29 +1287,27 @@ html:not(:has(#main)) header + div {
       display: grid;
       grid-template-columns: 2fr 1.3fr;
       grid-gap: 40px;
-      .story_text {
-        padding: 30px 0 20px 30px;
-      }
+      padding: 30px;
       .story_img {
         img {
           max-width: 100%;
           min-height: 100%;
           object-fit: cover;
-          border-radius: 0 20px 20px 0;
+        }
+      }
+      @media(min-width: 757px) {
+        img.--mobile {
+          display: none;
         }
       }
     }
     .about_story:nth-of-type(even) {
       grid-template-columns: 1.3fr 2fr;
-      .story_text {
-        padding: 30px 30px 20px 0;
-      }
       .story_img {
         img {
           max-width: 100%;
           min-height: 100%;
           object-fit: cover;
-          border-radius: 20px 0 0 20px;
         }
       }
     }
@@ -1276,7 +1315,7 @@ html:not(:has(#main)) header + div {
       .about_story {
         grid-template-columns: 1fr;
         grid-gap: 0;
-        padding: 0 !important;
+        padding: 30px !important;
         .story_img {
           max-height: 400px;
           img {
@@ -1284,7 +1323,6 @@ html:not(:has(#main)) header + div {
             height: 100%;
             max-height: 400px;
             object-fit: cover;
-            border-radius: 0 0 20px 20px;
           }
         }
         .story_img.--vertical {
@@ -1293,7 +1331,6 @@ html:not(:has(#main)) header + div {
           }
         }
         .story_text {
-          padding: 30px 15px 20px 15px;
           p {
             font-size: 14px;
           }
@@ -1302,7 +1339,6 @@ html:not(:has(#main)) header + div {
       .about_story:nth-of-type(even) {
         grid-template-columns: 1fr;
         grid-gap: 0;
-        padding: 0 !important;
         .story_img {
           max-height: 400px;
           img {
@@ -1310,12 +1346,10 @@ html:not(:has(#main)) header + div {
             height: 100%;
             max-height: 400px;
             object-fit: cover;
-            border-radius: 0 0 20px 20px;
           }
         }
         .story_text {
           order: -1;
-          padding: 30px 15px 20px 15px;
         }
       }
     }
