--- a/src/index.scss
+++ b/src/index.scss
@@ -951,7 +951,16 @@ html:not(:has(#main)) header + div {
     color: var(--primary-color);
     text-align: center;
   }
-
+  .puppies__photos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    @media(max-width: 978px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
   .puppies_price__background {
     padding: 10px 30px;
     background: #f7f7f7;
