--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 
 /* 
 font-family: 'Istok Web', sans-serif;
-font-family: 'Lora', serif; */
+font-family: 'Lora', serif;
+*/
+
 html {
   box-sizing: border-box;
 }
@@ -966,16 +968,18 @@ html:not(:has(#main)) header + div {
     margin-bottom: 30px;
     .puppy__information {
       display: grid;
-      grid-template-columns: 2fr 1fr;
-      grid-gap: 10px;
+      grid-template-columns: 1fr;
+      grid-gap: 0px;
+      margin-bottom: 30px;
       @media(max-width: 650px) {
         grid-template-columns: repeat(1, 1fr);
       }
     }
     .puppies_puppy__img {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(5, 1fr);
       grid-gap: 10px;
+      margin-top: 15px;
       @media(max-width: 650px) {
        overflow-x: auto;
        padding-bottom: 6px;
@@ -1005,6 +1009,7 @@ html:not(:has(#main)) header + div {
       display: flex;
       justify-content: start;
       flex-direction: column;
+      text-align: center;
       h3 {
         margin-top: 0;
         margin-bottom: 0;
@@ -1015,6 +1020,10 @@ html:not(:has(#main)) header + div {
         margin-bottom: 0;
         font-size: 14px;
         color: #aaa;
+      }
+      p {
+        margin-top: 10px;
+        margin-bottom: 0px;
       }
     }
   }
