--- a/src/index.scss
+++ b/src/index.scss
@@ -960,6 +960,24 @@ html:not(:has(#main)) header + div {
     font-size: 30px;
     font-family: "Lora", serif;
   }
+
+  .puppies__info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 50px;
+      img, p {
+        width: 400px;
+        max-width: 100%;
+        text-align: center;
+      }
+      p {
+        font-size: 20px;
+        line-height: 110%;
+      }
+  }
+
   .puppies__photos {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -977,10 +995,13 @@ html:not(:has(#main)) header + div {
     }
     .puppies_puppy__img {
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: repeat(6, 1fr);
       grid-gap: 10px;
       margin-top: 15px;
-      @media(max-width: 650px) {
+      @media(min-width: 651px) and (max-width: 978px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media(max-width: 650px) { 
        overflow-x: auto;
        padding-bottom: 6px;
         &::-webkit-scrollbar {
